# weltschmerz

./: .gitignore  LICENSE.md  README.md  anidb.py  anime.py  animetitle.py  animeweb.py  check_backup  db.py  file_to_timestamps.py  filehash.py  filehasher.py  get_ed2k_links.py  masks.py  move_files.py  move_screenshots.py  mpv_ed2k.py  parse_mylist_export.py  pyproject.toml  pyselect.py  remove_changed.py  remove_deleted.py  remove_dupes.py  rename_files.py  sorttable.LICENSE  style.css  tag-anime-screenshot-import.py  tag-anime-screenshot.py  test_filehash.py  test_mylistadd.py  titlecard_screenshot.lua  udpapi.py  unknown_files_with_crc32.py  weltschmerz.cfg.example  weltschmerz.py
templates/: anime_files.html  anime_list_screenshots.html  episode_screenshots.html  file_screenshots.html  screenshots.html
weltschmerz/: __init__.py  anidb.py  anime.py  delete_duplicates.py  filehash.py  filehasher.py  masks.py  move_files.py  remove_changed.py  remove_deleted.py
