[project]
name = "weltschmerz"
version = "0.0.4"
maintainers = [
  { name = "zerimond" },
]
description = "local anime file database with deduplication and sorting"
readme = "README.md"
requires-python = ">=3.6"
dependencies=[
    "SQLAlchemy",
    "pycryptodome",
    "click",
    "yumemi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["weltschmerz"]

[project.urls]
Homepage = "https://codeberg.org/zeromind/weltschmerz"
Issues = "https://codeberg.org/zeromind/weltschmerz/issues"

[project.scripts]
weltschmerz = "weltschmerz:cli"

